--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.12.8"
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.12.8",
+    "astro-icon": "^1.1.5",
+    "tailwindcss": "^4.1.11"
   }
 }
