--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -10,14 +10,14 @@
         "id": 1,
         "name": "NEST",
         "description": "Nighthawks Event Statistics Tool made in tkinter",
-        "link": "https://github.com/team24124/stats",
+        "link": "https://github.com/team24124/nest",
         "thumbnail": "src/assets/thumbnails/nest-thumbnail.png"
     },
     {
         "id": 2,
         "name": "FTC Robotics (Into the Deep)",
         "description": "Java codebase using FTC SDK",
-        "link": "https://github.com/team24124/stats",
+        "link": "https://github.com/team24124/nths-ftc-2025-24124",
         "thumbnail": "src/assets/thumbnails/ftc-thumbnail.png"
     }
 ]
